// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`baseline styles 1`] = `
".font-sans-400 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-sans-400.type-0\\\\/0 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 16px;
  transform: translateY(2.750000000000001px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/1 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 24px;
  transform: translateY(6.750000000000001px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/2 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 32px;
  transform: translateY(10.75px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/3 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 40px;
  transform: translateY(14.75px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/4 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 48px;
  transform: translateY(18.75px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/5 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 56px;
  transform: translateY(22.75px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/0 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 16px;
  transform: translateY(2px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/1 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 24px;
  transform: translateY(6px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/2 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 32px;
  transform: translateY(10px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/3 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 40px;
  transform: translateY(14px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/4 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 48px;
  transform: translateY(18px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/5 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 56px;
  transform: translateY(22px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

.bg-baseline {
  position: relative;
  background-repeat: repeat;
  background-size: 100% 16px;
  background-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0.08) 8px,
    transparent 8px
    );
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:type-0\\\\/0 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 16px;
    transform: translateY(2.750000000000001px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/1 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 24px;
    transform: translateY(6.750000000000001px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/2 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 32px;
    transform: translateY(10.75px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/3 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 40px;
    transform: translateY(14.75px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/4 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 48px;
    transform: translateY(18.75px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/5 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 56px;
    transform: translateY(22.75px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/0 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 16px;
    transform: translateY(2px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/1 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 24px;
    transform: translateY(6px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/2 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 32px;
    transform: translateY(10px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/3 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 40px;
    transform: translateY(14px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/4 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 48px;
    transform: translateY(18px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/5 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 56px;
    transform: translateY(22px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }
}"
`;

exports[`capheight styles 1`] = `
".font-sans-400 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-sans-400.capheight-0\\\\/0 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 9.771999999999998px;
  transform: translateY(-0.3639999999999999px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/1 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 17.772px;
  transform: translateY(3.636px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/2 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 25.772px;
  transform: translateY(7.636px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/3 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 33.772px;
  transform: translateY(11.636px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/4 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 41.772px;
  transform: translateY(15.636px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/5 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 49.772px;
  transform: translateY(19.636px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/0 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 11.168px;
  transform: translateY(-0.41600000000000037px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/1 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 19.168px;
  transform: translateY(3.5839999999999996px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/2 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 27.168px;
  transform: translateY(7.584px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/3 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 35.168px;
  transform: translateY(11.584px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/4 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 43.168px;
  transform: translateY(15.584px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/5 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 51.168px;
  transform: translateY(19.584px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

.bg-baseline {
  position: relative;
  background-repeat: repeat;
  background-size: 100% 16px;
  background-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0.08) 8px,
    transparent 8px
    );
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:capheight-0\\\\/0 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 9.771999999999998px;
    transform: translateY(-0.3639999999999999px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/1 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 17.772px;
    transform: translateY(3.636px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/2 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 25.772px;
    transform: translateY(7.636px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/3 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 33.772px;
    transform: translateY(11.636px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/4 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 41.772px;
    transform: translateY(15.636px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/5 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 49.772px;
    transform: translateY(19.636px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/0 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 11.168px;
    transform: translateY(-0.41600000000000037px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/1 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 19.168px;
    transform: translateY(3.5839999999999996px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/2 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 27.168px;
    transform: translateY(7.584px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/3 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 35.168px;
    transform: translateY(11.584px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/4 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 43.168px;
    transform: translateY(15.584px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/5 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 51.168px;
    transform: translateY(19.584px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }
}"
`;

exports[`measure styles 1`] = `
".font-sans-400 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.bg-baseline {
  position: relative;
  background-repeat: repeat;
  background-size: 100% 16px;
  background-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0.08) 8px,
    transparent 8px
    )
}

.measure-0 {
  max-width: 15ch
}

.measure-1 {
  max-width: 20ch
}

@media (min-width: 640px) {
  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:measure-0 {
    max-width: 15ch
  }

  .sm\\\\:measure-1 {
    max-width: 20ch
  }
}"
`;

exports[`rhythm styles 1`] = `
".font-sans-400 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.bg-baseline {
  position: relative;
  background-repeat: repeat;
  background-size: 100% 16px;
  background-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0.08) 8px,
    transparent 8px
    )
}

.rhythm-0 > * + * {
  margin-top: 0px
}

.rhythm-y-0 > * + * {
  margin-top: 0px
}

.rhythm-x-0 > * + * {
  margin-left: 0px
}

.rhythm-1 > * + * {
  margin-top: 8px
}

.rhythm-y-1 > * + * {
  margin-top: 8px
}

.rhythm-x-1 > * + * {
  margin-left: 8px
}

.rhythm-2 > * + * {
  margin-top: 16px
}

.rhythm-y-2 > * + * {
  margin-top: 16px
}

.rhythm-x-2 > * + * {
  margin-left: 16px
}

@media (min-width: 640px) {
  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:rhythm-0 > * + * {
    margin-top: 0px
  }

  .sm\\\\:rhythm-y-0 > * + * {
    margin-top: 0px
  }

  .sm\\\\:rhythm-x-0 > * + * {
    margin-left: 0px
  }

  .sm\\\\:rhythm-1 > * + * {
    margin-top: 8px
  }

  .sm\\\\:rhythm-y-1 > * + * {
    margin-top: 8px
  }

  .sm\\\\:rhythm-x-1 > * + * {
    margin-left: 8px
  }

  .sm\\\\:rhythm-2 > * + * {
    margin-top: 16px
  }

  .sm\\\\:rhythm-y-2 > * + * {
    margin-top: 16px
  }

  .sm\\\\:rhythm-x-2 > * + * {
    margin-left: 16px
  }
}"
`;

exports[`use px 1`] = `
".font-sans-400 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-sans-400.type-0\\\\/0 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 16px;
  transform: translateY(2.750000000000001px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/0 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 9.771999999999998px;
  transform: translateY(-0.3639999999999999px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/0 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 0.525;
  transform: translateY(-0.11249999999999989em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/0:before {
  content: '';
  margin-top: calc(-0.07142857142857142em );
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/1 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 24px;
  transform: translateY(6.750000000000001px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/1 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 17.772px;
  transform: translateY(3.636px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/1 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 1.0964285714285715;
  transform: translateY(0.17321428571428582em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/1:before {
  content: '';
  margin-top: calc(-0.6428571428571429em );
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/2 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 32px;
  transform: translateY(10.75px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/2 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 25.772px;
  transform: translateY(7.636px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/2 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 1.667857142857143;
  transform: translateY(0.4589285714285715em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/2:before {
  content: '';
  margin-top: calc(-1.2142857142857142em );
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/3 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 40px;
  transform: translateY(14.75px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/3 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 33.772px;
  transform: translateY(11.636px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/3 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 2.2392857142857143;
  transform: translateY(0.7446428571428572em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/3:before {
  content: '';
  margin-top: calc(-1.7857142857142858em );
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/4 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 48px;
  transform: translateY(18.75px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/4 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 41.772px;
  transform: translateY(15.636px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/4 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 2.810714285714286;
  transform: translateY(1.030357142857143em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/4:before {
  content: '';
  margin-top: calc(-2.357142857142857em );
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/5 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 56px;
  transform: translateY(22.75px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/5 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 49.772px;
  transform: translateY(19.636px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/5 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 3.382142857142857;
  transform: translateY(1.3160714285714286em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/5:before {
  content: '';
  margin-top: calc(-2.9285714285714284em );
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/0 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 16px;
  transform: translateY(2px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/0 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 11.168px;
  transform: translateY(-0.41600000000000037px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/0 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 0.525;
  transform: translateY(-0.11249999999999999em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/0:before {
  content: '';
  margin-top: calc(-0.0625em );
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/1 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 24px;
  transform: translateY(6px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/1 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 19.168px;
  transform: translateY(3.5839999999999996px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/1 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 1.025;
  transform: translateY(0.13749999999999996em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/1:before {
  content: '';
  margin-top: calc(-0.5624999999999999em );
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/2 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 32px;
  transform: translateY(10px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/2 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 27.168px;
  transform: translateY(7.584px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/2 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 1.525;
  transform: translateY(0.38749999999999996em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/2:before {
  content: '';
  margin-top: calc(-1.0625em );
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/3 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 40px;
  transform: translateY(14px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/3 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 35.168px;
  transform: translateY(11.584px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/3 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 2.025;
  transform: translateY(0.6375em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/3:before {
  content: '';
  margin-top: calc(-1.5625em );
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/4 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 48px;
  transform: translateY(18px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/4 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 43.168px;
  transform: translateY(15.584px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/4 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 2.525;
  transform: translateY(0.8875em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/4:before {
  content: '';
  margin-top: calc(-2.0625em );
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/5 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 56px;
  transform: translateY(22px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/5 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 51.168px;
  transform: translateY(19.584px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/5 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 3.025;
  transform: translateY(1.1375em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/5:before {
  content: '';
  margin-top: calc(-2.5625em );
  display: block;
  height: 0;
}

.bg-baseline {
  position: relative;
  background-repeat: repeat;
  background-size: 100% 16px;
  background-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0.08) 8px,
    transparent 8px
    );
}

.measure-0 {
  max-width: 15ch;
}

.measure-1 {
  max-width: 20ch;
}

.rhythm-0 > * + * {
  margin-top: 0px;
}

.rhythm-y-0 > * + * {
  margin-top: 0px;
}

.rhythm-x-0 > * + * {
  margin-left: 0px;
}

.rhythm-1 > * + * {
  margin-top: 8px;
}

.rhythm-y-1 > * + * {
  margin-top: 8px;
}

.rhythm-x-1 > * + * {
  margin-left: 8px;
}

.rhythm-2 > * + * {
  margin-top: 16px;
}

.rhythm-y-2 > * + * {
  margin-top: 16px;
}

.rhythm-x-2 > * + * {
  margin-left: 16px;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:type-0\\\\/0 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 16px;
    transform: translateY(2.750000000000001px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/0 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 9.771999999999998px;
    transform: translateY(-0.3639999999999999px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/0 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 0.525;
    transform: translateY(-0.11249999999999989em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/0:before {
    content: '';
    margin-top: calc(-0.07142857142857142em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/1 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 24px;
    transform: translateY(6.750000000000001px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/1 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 17.772px;
    transform: translateY(3.636px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/1 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 1.0964285714285715;
    transform: translateY(0.17321428571428582em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/1:before {
    content: '';
    margin-top: calc(-0.6428571428571429em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/2 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 32px;
    transform: translateY(10.75px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/2 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 25.772px;
    transform: translateY(7.636px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/2 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 1.667857142857143;
    transform: translateY(0.4589285714285715em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/2:before {
    content: '';
    margin-top: calc(-1.2142857142857142em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/3 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 40px;
    transform: translateY(14.75px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/3 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 33.772px;
    transform: translateY(11.636px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/3 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 2.2392857142857143;
    transform: translateY(0.7446428571428572em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/3:before {
    content: '';
    margin-top: calc(-1.7857142857142858em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/4 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 48px;
    transform: translateY(18.75px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/4 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 41.772px;
    transform: translateY(15.636px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/4 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 2.810714285714286;
    transform: translateY(1.030357142857143em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/4:before {
    content: '';
    margin-top: calc(-2.357142857142857em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/5 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 56px;
    transform: translateY(22.75px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/5 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 49.772px;
    transform: translateY(19.636px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/5 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 3.382142857142857;
    transform: translateY(1.3160714285714286em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/5:before {
    content: '';
    margin-top: calc(-2.9285714285714284em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/0 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 16px;
    transform: translateY(2px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/0 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 11.168px;
    transform: translateY(-0.41600000000000037px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/0 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 0.525;
    transform: translateY(-0.11249999999999999em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/0:before {
    content: '';
    margin-top: calc(-0.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/1 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 24px;
    transform: translateY(6px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/1 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 19.168px;
    transform: translateY(3.5839999999999996px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/1 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 1.025;
    transform: translateY(0.13749999999999996em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/1:before {
    content: '';
    margin-top: calc(-0.5624999999999999em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/2 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 32px;
    transform: translateY(10px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/2 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 27.168px;
    transform: translateY(7.584px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/2 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 1.525;
    transform: translateY(0.38749999999999996em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/2:before {
    content: '';
    margin-top: calc(-1.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/3 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 40px;
    transform: translateY(14px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/3 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 35.168px;
    transform: translateY(11.584px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/3 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 2.025;
    transform: translateY(0.6375em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/3:before {
    content: '';
    margin-top: calc(-1.5625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/4 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 48px;
    transform: translateY(18px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/4 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 43.168px;
    transform: translateY(15.584px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/4 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 2.525;
    transform: translateY(0.8875em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/4:before {
    content: '';
    margin-top: calc(-2.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/5 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 56px;
    transform: translateY(22px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/5 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 51.168px;
    transform: translateY(19.584px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/5 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 3.025;
    transform: translateY(1.1375em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/5:before {
    content: '';
    margin-top: calc(-2.5625em );
    display: block;
    height: 0;
  }

  .sm\\\\:measure-0 {
    max-width: 15ch;
  }

  .sm\\\\:measure-1 {
    max-width: 20ch;
  }

  .sm\\\\:rhythm-0 > * + * {
    margin-top: 0px;
  }

  .sm\\\\:rhythm-y-0 > * + * {
    margin-top: 0px;
  }

  .sm\\\\:rhythm-x-0 > * + * {
    margin-left: 0px;
  }

  .sm\\\\:rhythm-1 > * + * {
    margin-top: 8px;
  }

  .sm\\\\:rhythm-y-1 > * + * {
    margin-top: 8px;
  }

  .sm\\\\:rhythm-x-1 > * + * {
    margin-left: 8px;
  }

  .sm\\\\:rhythm-2 > * + * {
    margin-top: 16px;
  }

  .sm\\\\:rhythm-y-2 > * + * {
    margin-top: 16px;
  }

  .sm\\\\:rhythm-x-2 > * + * {
    margin-left: 16px;
  }
}"
`;

exports[`use rem 1`] = `
".font-sans-400 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-sans-400.type-0\\\\/0 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 1.1428571428571428;
  transform: translateY(0.19642857142857148em);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/0:before {
  content: '';
  margin-top: calc(-0.07142857142857142em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/0 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 0.6979999999999998;
  transform: translateY(-0.025999999999999992em);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/0:before {
  content: '';
  margin-top: calc(-0.07142857142857142em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/0 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 7.3500000000000005px;
  transform: translateY(-1.5749999999999984px);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/1 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 1.7142857142857142;
  transform: translateY(0.4821428571428572em);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/1:before {
  content: '';
  margin-top: calc(-0.6428571428571429em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/1 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 1.2694285714285714;
  transform: translateY(0.25971428571428573em);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/1:before {
  content: '';
  margin-top: calc(-0.6428571428571429em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/1 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 15.350000000000001px;
  transform: translateY(2.4250000000000016px);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/2 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 2.2857142857142856;
  transform: translateY(0.7678571428571429em);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/2:before {
  content: '';
  margin-top: calc(-1.2142857142857142em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/2 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 1.8408571428571427;
  transform: translateY(0.5454285714285715em);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/2:before {
  content: '';
  margin-top: calc(-1.2142857142857142em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/2 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 23.35px;
  transform: translateY(6.425000000000002px);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/3 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 2.857142857142857;
  transform: translateY(1.0535714285714286em);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/3:before {
  content: '';
  margin-top: calc(-1.7857142857142858em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/3 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 2.4122857142857144;
  transform: translateY(0.8311428571428571em);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/3:before {
  content: '';
  margin-top: calc(-1.7857142857142858em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/3 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 31.35px;
  transform: translateY(10.425px);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/4 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 3.4285714285714284;
  transform: translateY(1.3392857142857142em);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/4:before {
  content: '';
  margin-top: calc(-2.357142857142857em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/4 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 2.9837142857142855;
  transform: translateY(1.1168571428571428em);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/4:before {
  content: '';
  margin-top: calc(-2.357142857142857em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/4 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 39.35px;
  transform: translateY(14.425px);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/5 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 4;
  transform: translateY(1.625em);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/5:before {
  content: '';
  margin-top: calc(-2.9285714285714284em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/5 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 3.555142857142857;
  transform: translateY(1.4025714285714286em);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/5:before {
  content: '';
  margin-top: calc(-2.9285714285714284em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/5 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 47.35px;
  transform: translateY(18.425px);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/0 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 1;
  transform: translateY(0.125em);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/0:before {
  content: '';
  margin-top: calc(-0.0625em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/0 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 0.698;
  transform: translateY(-0.026000000000000023em);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/0:before {
  content: '';
  margin-top: calc(-0.0625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/0 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 8.4px;
  transform: translateY(-1.7999999999999998px);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/1 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 1.5;
  transform: translateY(0.375em);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/1:before {
  content: '';
  margin-top: calc(-0.5625em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/1 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 1.198;
  transform: translateY(0.22399999999999998em);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/1:before {
  content: '';
  margin-top: calc(-0.5625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/1 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 16.4px;
  transform: translateY(2.1999999999999993px);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/1:before {
  content: '';
  margin-top: -8.999999999999998px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/2 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 2;
  transform: translateY(0.625em);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/2:before {
  content: '';
  margin-top: calc(-1.0625em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/2 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 1.698;
  transform: translateY(0.474em);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/2:before {
  content: '';
  margin-top: calc(-1.0625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/2 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 24.4px;
  transform: translateY(6.199999999999999px);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/3 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 2.5;
  transform: translateY(0.875em);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/3:before {
  content: '';
  margin-top: calc(-1.5625em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/3 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 2.198;
  transform: translateY(0.724em);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/3:before {
  content: '';
  margin-top: calc(-1.5625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/3 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 32.4px;
  transform: translateY(10.2px);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/4 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 3;
  transform: translateY(1.125em);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/4:before {
  content: '';
  margin-top: calc(-2.0625em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/4 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 2.698;
  transform: translateY(0.974em);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/4:before {
  content: '';
  margin-top: calc(-2.0625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/4 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 40.4px;
  transform: translateY(14.2px);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/5 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 3.5;
  transform: translateY(1.375em);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/5:before {
  content: '';
  margin-top: calc(-2.5625em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/5 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 3.198;
  transform: translateY(1.224em);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/5:before {
  content: '';
  margin-top: calc(-2.5625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/5 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 48.4px;
  transform: translateY(18.2px);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

.bg-baseline {
  position: relative;
  background-repeat: repeat;
  background-size: 100% 1rem;
  background-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0.08) 0.5rem,
    transparent 0.5rem
    );
}

.measure-0 {
  max-width: 15ch;
}

.measure-1 {
  max-width: 20ch;
}

.rhythm-0 > * + * {
  margin-top: 0rem;
}

.rhythm-y-0 > * + * {
  margin-top: 0rem;
}

.rhythm-x-0 > * + * {
  margin-left: 0rem;
}

.rhythm-1 > * + * {
  margin-top: 0.5rem;
}

.rhythm-y-1 > * + * {
  margin-top: 0.5rem;
}

.rhythm-x-1 > * + * {
  margin-left: 0.5rem;
}

.rhythm-2 > * + * {
  margin-top: 1rem;
}

.rhythm-y-2 > * + * {
  margin-top: 1rem;
}

.rhythm-x-2 > * + * {
  margin-left: 1rem;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:type-0\\\\/0 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 1.1428571428571428;
    transform: translateY(0.19642857142857148em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/0:before {
    content: '';
    margin-top: calc(-0.07142857142857142em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/0 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 0.6979999999999998;
    transform: translateY(-0.025999999999999992em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/0:before {
    content: '';
    margin-top: calc(-0.07142857142857142em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/0 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 7.3500000000000005px;
    transform: translateY(-1.5749999999999984px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/1 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 1.7142857142857142;
    transform: translateY(0.4821428571428572em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/1:before {
    content: '';
    margin-top: calc(-0.6428571428571429em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/1 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 1.2694285714285714;
    transform: translateY(0.25971428571428573em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/1:before {
    content: '';
    margin-top: calc(-0.6428571428571429em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/1 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 15.350000000000001px;
    transform: translateY(2.4250000000000016px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/2 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 2.2857142857142856;
    transform: translateY(0.7678571428571429em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/2:before {
    content: '';
    margin-top: calc(-1.2142857142857142em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/2 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 1.8408571428571427;
    transform: translateY(0.5454285714285715em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/2:before {
    content: '';
    margin-top: calc(-1.2142857142857142em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/2 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 23.35px;
    transform: translateY(6.425000000000002px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/3 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 2.857142857142857;
    transform: translateY(1.0535714285714286em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/3:before {
    content: '';
    margin-top: calc(-1.7857142857142858em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/3 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 2.4122857142857144;
    transform: translateY(0.8311428571428571em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/3:before {
    content: '';
    margin-top: calc(-1.7857142857142858em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/3 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 31.35px;
    transform: translateY(10.425px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/4 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 3.4285714285714284;
    transform: translateY(1.3392857142857142em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/4:before {
    content: '';
    margin-top: calc(-2.357142857142857em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/4 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 2.9837142857142855;
    transform: translateY(1.1168571428571428em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/4:before {
    content: '';
    margin-top: calc(-2.357142857142857em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/4 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 39.35px;
    transform: translateY(14.425px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/5 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 4;
    transform: translateY(1.625em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/5:before {
    content: '';
    margin-top: calc(-2.9285714285714284em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/5 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 3.555142857142857;
    transform: translateY(1.4025714285714286em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/5:before {
    content: '';
    margin-top: calc(-2.9285714285714284em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/5 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 47.35px;
    transform: translateY(18.425px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/0 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 1;
    transform: translateY(0.125em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/0:before {
    content: '';
    margin-top: calc(-0.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/0 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 0.698;
    transform: translateY(-0.026000000000000023em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/0:before {
    content: '';
    margin-top: calc(-0.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/0 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 8.4px;
    transform: translateY(-1.7999999999999998px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/1 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 1.5;
    transform: translateY(0.375em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/1:before {
    content: '';
    margin-top: calc(-0.5625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/1 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 1.198;
    transform: translateY(0.22399999999999998em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/1:before {
    content: '';
    margin-top: calc(-0.5625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/1 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 16.4px;
    transform: translateY(2.1999999999999993px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/1:before {
    content: '';
    margin-top: -8.999999999999998px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/2 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 2;
    transform: translateY(0.625em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/2:before {
    content: '';
    margin-top: calc(-1.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/2 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 1.698;
    transform: translateY(0.474em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/2:before {
    content: '';
    margin-top: calc(-1.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/2 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 24.4px;
    transform: translateY(6.199999999999999px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/3 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 2.5;
    transform: translateY(0.875em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/3:before {
    content: '';
    margin-top: calc(-1.5625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/3 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 2.198;
    transform: translateY(0.724em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/3:before {
    content: '';
    margin-top: calc(-1.5625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/3 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 32.4px;
    transform: translateY(10.2px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/4 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 3;
    transform: translateY(1.125em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/4:before {
    content: '';
    margin-top: calc(-2.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/4 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 2.698;
    transform: translateY(0.974em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/4:before {
    content: '';
    margin-top: calc(-2.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/4 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 40.4px;
    transform: translateY(14.2px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/5 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 3.5;
    transform: translateY(1.375em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/5:before {
    content: '';
    margin-top: calc(-2.5625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/5 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 3.198;
    transform: translateY(1.224em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/5:before {
    content: '';
    margin-top: calc(-2.5625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/5 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 48.4px;
    transform: translateY(18.2px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }

  .sm\\\\:measure-0 {
    max-width: 15ch;
  }

  .sm\\\\:measure-1 {
    max-width: 20ch;
  }

  .sm\\\\:rhythm-0 > * + * {
    margin-top: 0rem;
  }

  .sm\\\\:rhythm-y-0 > * + * {
    margin-top: 0rem;
  }

  .sm\\\\:rhythm-x-0 > * + * {
    margin-left: 0rem;
  }

  .sm\\\\:rhythm-1 > * + * {
    margin-top: 0.5rem;
  }

  .sm\\\\:rhythm-y-1 > * + * {
    margin-top: 0.5rem;
  }

  .sm\\\\:rhythm-x-1 > * + * {
    margin-left: 0.5rem;
  }

  .sm\\\\:rhythm-2 > * + * {
    margin-top: 1rem;
  }

  .sm\\\\:rhythm-y-2 > * + * {
    margin-top: 1rem;
  }

  .sm\\\\:rhythm-x-2 > * + * {
    margin-left: 1rem;
  }
}"
`;

exports[`xheight styles 1`] = `
".font-sans-400 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-sans-400.xheight-0\\\\/0 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 0.525;
  transform: translateY(-0.11249999999999989em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/0:before {
  content: '';
  margin-top: calc(-0.07142857142857142em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/1 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 1.0964285714285715;
  transform: translateY(0.17321428571428582em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/1:before {
  content: '';
  margin-top: calc(-0.6428571428571429em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/2 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 1.667857142857143;
  transform: translateY(0.4589285714285715em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/2:before {
  content: '';
  margin-top: calc(-1.2142857142857142em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/3 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 2.2392857142857143;
  transform: translateY(0.7446428571428572em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/3:before {
  content: '';
  margin-top: calc(-1.7857142857142858em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/4 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 2.810714285714286;
  transform: translateY(1.030357142857143em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/4:before {
  content: '';
  margin-top: calc(-2.357142857142857em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/5 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 3.382142857142857;
  transform: translateY(1.3160714285714286em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/5:before {
  content: '';
  margin-top: calc(-2.9285714285714284em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/0 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 0.525;
  transform: translateY(-0.11249999999999999em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/0:before {
  content: '';
  margin-top: calc(-0.0625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/1 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 1.025;
  transform: translateY(0.13749999999999996em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/1:before {
  content: '';
  margin-top: calc(-0.5624999999999999em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/2 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 1.525;
  transform: translateY(0.38749999999999996em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/2:before {
  content: '';
  margin-top: calc(-1.0625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/3 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 2.025;
  transform: translateY(0.6375em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/3:before {
  content: '';
  margin-top: calc(-1.5625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/4 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 2.525;
  transform: translateY(0.8875em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/4:before {
  content: '';
  margin-top: calc(-2.0625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/5 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 3.025;
  transform: translateY(1.1375em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/5:before {
  content: '';
  margin-top: calc(-2.5625em );
  display: block;
  height: 0;
}

.bg-baseline {
  position: relative;
  background-repeat: repeat;
  background-size: 100% 16px;
  background-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0.08) 8px,
    transparent 8px
    );
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:xheight-0\\\\/0 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 0.525;
    transform: translateY(-0.11249999999999989em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/0:before {
    content: '';
    margin-top: calc(-0.07142857142857142em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/1 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 1.0964285714285715;
    transform: translateY(0.17321428571428582em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/1:before {
    content: '';
    margin-top: calc(-0.6428571428571429em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/2 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 1.667857142857143;
    transform: translateY(0.4589285714285715em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/2:before {
    content: '';
    margin-top: calc(-1.2142857142857142em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/3 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 2.2392857142857143;
    transform: translateY(0.7446428571428572em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/3:before {
    content: '';
    margin-top: calc(-1.7857142857142858em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/4 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 2.810714285714286;
    transform: translateY(1.030357142857143em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/4:before {
    content: '';
    margin-top: calc(-2.357142857142857em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/5 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 3.382142857142857;
    transform: translateY(1.3160714285714286em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/5:before {
    content: '';
    margin-top: calc(-2.9285714285714284em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/0 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 0.525;
    transform: translateY(-0.11249999999999999em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/0:before {
    content: '';
    margin-top: calc(-0.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/1 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 1.025;
    transform: translateY(0.13749999999999996em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/1:before {
    content: '';
    margin-top: calc(-0.5624999999999999em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/2 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 1.525;
    transform: translateY(0.38749999999999996em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/2:before {
    content: '';
    margin-top: calc(-1.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/3 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 2.025;
    transform: translateY(0.6375em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/3:before {
    content: '';
    margin-top: calc(-1.5625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/4 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 2.525;
    transform: translateY(0.8875em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/4:before {
    content: '';
    margin-top: calc(-2.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/5 {
    font-family: \\"IBM Plex Sans\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 3.025;
    transform: translateY(1.1375em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/5:before {
    content: '';
    margin-top: calc(-2.5625em );
    display: block;
    height: 0;
  }
}"
`;
